Final touches ugh

--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -150,7 +150,17 @@
                         <td>
                           <div class="switch">
                             <label>
-                              <input type="checkbox" class="toggleRabbit" /> <span class="lever"></span>
+                              <input type="checkbox" class="toggleRabbit rabbit" /> <span class="lever"></span>
+                            </label>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><h5 id="pMiDOption">Anime4You</h5></td>
+                        <td>
+                          <div class="switch">
+                            <label>
+                              <input type="checkbox" class="toggleAnime4You anime4you" /> <span class="lever"></span>
                             </label>
                           </div>
                         </td>
@@ -181,16 +191,6 @@
                           <div class="switch">
                             <label>
                               <input type="checkbox" class="toggleFimFiction" /> <span class="lever"></span>
-                            </label>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td><h5 id="pMiDOption">Anime4You</h5></td>
-                        <td>
-                          <div class="switch">
-                            <label>
-                              <input type="checkbox" class="toggleAnime4You" /> <span class="lever"></span>
                             </label>
                           </div>
                         </td>
