Language system improvements

--- a/Extension/updated.html
+++ b/Extension/updated.html
@@ -17,13 +17,13 @@
     <div id="pMiDHeader"><img src="../../icon.png" draggable="false" /></div>
     <div id="content">
       <div class="card-panel">
-        <h1 id="pMiDHeading" class="Pheading"></h1>
-        <h3 class="PwhatsNew"></h3>
+        <h1 term="tab.updated.heading" id="pMiDHeading"></h1>
+        <h3 term="tab.updated.subHeading.whatsNew"></h3>
         <ul id="WhatsNewList"></ul>
-        <h3 class="PwhatChanged"></h3>
+        <h3 term="tab.updated.subHeading.whatChanged"></h3>
         <ul id="WhatChangedList"></ul>
         <div id="buttonWrapper">
-          <a class="gotIt waves-effect btn PgotIt"></a>
+          <a term="tab.updated.gotIt" class="gotIt waves-effect btn"></a>
         </div>
         <p class="smallCenter PlikeThisProject"></p>
       </div>
