Firefox stuffs again

--- a/Firefox_Extension/html/popup.html
+++ b/Firefox_Extension/html/popup.html
@@ -17,7 +17,7 @@
     />
 
     <script src="../../js/util/jquery-3.3.1.min.js"></script>
-    <script src="../../js/util/custom-i18n.js"></script>
+    <script src="../../js/util/internalizationManager.js"></script>
     <script src="../../js/options.js"></script>
     <script src="../../js/credits.js"></script>
     <script src="../../js/popup.js"></script>
