--- a/Firefox_Extension/updated.html
+++ b/Firefox_Extension/updated.html
@@ -11,7 +11,7 @@
       media="screen,projection"
     />
     <script src="../../js/util/jquery-3.3.1.min.js"></script>
-    <script src="../../js/util/custom-i18n.js"></script>
+    <script src="../../js/util/internalizationManager.js"></script>
   </head>
 
   <body>
