--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -1,5 +1,6 @@
 <html class="dark">
   <head>
+    <meta charset="utf-8" />
     <title>PreMiD - Thank you!</title>
     <link rel="stylesheet" href="css/tab.css" />
     <!-- Import materialize.css -->
@@ -10,7 +11,7 @@
       media="screen,projection"
     />
     <script src="js/util/jquery-3.3.1.min.js"></script>
-    <script src="js/util/custom-i18n.js"></script>
+    <script src="js/util/langManager.js"></script>
   </head>
 
   <body>
