--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -1,7 +1,7 @@
 <html class="dark">
   <head>
     <meta charset="utf-8" />
-    <title>PreMiD - Thank you!</title>
+    <title>PreMiD - Thank you!!</title>
     <link rel="stylesheet" href="css/tab.css" />
     <!-- Import materialize.css -->
     <link
