--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -142,126 +142,12 @@
                 </tr>
               </table>
             </div>
-            <div class="card-panel">
+            <div class="card-panel presenceWrapper">
               <h3 term="popup.options.headings.presences" id="pMiDHeading"></h3>
-              <table id="options">
-                <tr>
-                  <td><h5 id="pMiDOption">YouTube</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input class="yt toggleYouTube" type="checkbox" /><span
-                          class="lever"
-                        ></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">YouTube Music</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          class="yt toggleYouTubeMusic"
-                          type="checkbox"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Twitch</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          class="twitch toggleTwitch"
-                          type="checkbox"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">SoundCloud</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          class="soundcloud toggleSoundCloud"
-                          type="checkbox"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Netflix</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          class="netflix toggleNetflix"
-                          type="checkbox"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Rabb.it</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          type="checkbox"
-                          class="toggleRabbit rabbit"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Crunchyroll</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          type="checkbox"
-                          class="toggleCrunchyroll crunchyroll"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Aniflix</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          type="checkbox"
-                          class="toggleAniflix aniflix"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><h5 id="pMiDOption">Anime4You</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          type="checkbox"
-                          class="toggleAnime4You anime4you"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-              </table>
+              <table id="options" class="presences"></table>
+              <a class="btn waves-effect waves-discord presenceStore"
+                >Presenz Store</a
+              >
             </div>
           </div>
         </div>
