--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -261,6 +261,19 @@
                     </div>
                   </td>
                 </tr>
+				<tr>
+                  <td><h5 id="pMiDOption">Branitube</h5></td>
+                  <td>
+                    <div class="switch">
+                      <label>
+                        <input
+                          type="checkbox"
+                          class="toggleBranitube branitube"
+                        /><span class="lever"></span>
+                      </label>
+                    </div>
+                  </td>
+                </tr>
               </table>
             </div>
           </div>
