--- a/Extension/html/popup.html
+++ b/Extension/html/popup.html
@@ -183,6 +183,19 @@
                     </div>
                   </td>
                 </tr>
+				<tr>
+                  <td><h5 id="pMiDOption">Mixer</h5></td>
+                  <td>
+                    <div class="switch">
+                      <label>
+                        <input
+                          type="checkbox"
+                          class="toggleMixer mixer"
+                        /><span class="lever"></span>
+                      </label>
+                    </div>
+                  </td>
+                </tr>
                 <tr>
                   <td><h5 id="pMiDOption">SoundCloud</h5></td>
                   <td>
@@ -256,19 +269,6 @@
                         <input
                           type="checkbox"
                           class="toggleAnime4You anime4you"
-                        /><span class="lever"></span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-				<tr>
-                  <td><h5 id="pMiDOption">Branitube</h5></td>
-                  <td>
-                    <div class="switch">
-                      <label>
-                        <input
-                          type="checkbox"
-                          class="toggleBranitube branitube"
                         /><span class="lever"></span>
                       </label>
                     </div>
