--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -33,7 +33,7 @@
           <a
             term="tab.installed.letsStart"
             draggable="false"
-            href="https://www.youtube.com/watch?v=DLzxrzFCyOs"
+            href="https://premid.app/store"
             class="close waves-effect btn"
           ></a>
           <a
