needs to be 'beta' subdomain

--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -33,7 +33,7 @@
           <a
             term="tab.installed.letsStart"
             draggable="false"
-            href="https://premid.app/store"
+            href="https://beta.premid.app/store"
             class="close waves-effect btn"
           ></a>
           <a
