--- a/src/windows/update.html
+++ b/src/windows/update.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>PreMiD &bull; Update avaiable!</title>
+  <title>PreMiD &bull; Update available!</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/update.css">
   <link href="css/ripple.css" rel="stylesheet">
