I think you guys know the drill...

--- a/Extension/installed.html
+++ b/Extension/installed.html
@@ -39,7 +39,7 @@
           <a
             term="tab.installed.getSupport"
             draggable="false"
-            href="https://premid.app/help"
+            href="https://wiki.premid.app/troubleshooting/troubleshooting"
             class="getSupport waves-effect btn"
           ></a>
         </div>
